# DUNE-FEM-Oseen

./: .gitignore  .gitmodules  CMakeLists.txt  COPYING  Doxyfile.in  Makefile.am  TODO.txt  cleanup.sh  config.opts.almob_documentation  config.opts.almob_no_documentation  config.opts.alserv_documentation  config.opts.alserv_no_documentation  config.opts.barney_documentation  config.opts.barney_no_documentation  config.opts.debug  config.opts.koshfest_documentation  config.opts.koshfest_no_documentation  config.opts.koshmob_no_documentation  config.opts.performance  config.opts.performance_icc  config.opts.scorpion_documentation  config.opts.scorpion_no_documentation  config.opts.wwu_documentation  config.opts.wwu_no_documentation  config.opts.zivsmp  configure.ac  dune.module  fix-libtool.sh  lines  setup-only.sh  setup.sh  setup_module.sh  setup_only.sh  stats.sh  svn_checkout  update
darcy/: CMakeLists.txt  Makefile.am  darcy.param  darcy_permeabilitytensor.cc  darcy_visualization.cc  elementintegrators.hh  micro_reference_velocity_X_ref_0.ddf  micro_reference_velocity_X_ref_1.ddf  micro_reference_velocity_X_ref_1.dgf  micro_reference_velocity_X_ref_2.dgf  micro_reference_velocity_Y_ref_0.ddf  unit_sand_pore_with_outer_cube_in_2d.dgf
dune-fem-howto/: .gitignore  Makefile.am  configure.ac  dune.module  libtool
dune-fem-howto/doc/: 1_what_is_dune.tex  2_short_introduction_to_grid_interface.tex  5_localdg_advection_diffusion.tex  Makefile  femhowto.tex  installation-fem.tex  installation_body.tex
dune-fem-howto/doc/installation/: checkout.sh  compile.sh
dune-fem-howto/doc/pics/: dune-logo1.eps
dune-fem-howto/sources/: gaussintegration.cc  gettingstarted.cc
dune-fem-howto/sources/localdg/: Makefile.am
dune-fem-howto/sources/poisson/: Makefile.am  periodicproblem.cc
dune-fem-howto/src_finitevolume/: Makefile.am  finitevolume.cc
dune-fem-howto/src_grid/: Makefile.am
dune-fem-howto/src_localdg/: Makefile.am  advectdiff.hh  datadisp.cc  dgtest.cc  discretemodels.hh  models.hh  problem.hh  scalarmodels.hh  stuff.cc
dune-fem-howto/src_poisson/: README  boundary.hh  lagrange.cc  massmatrix.hh
dune-femhowto/: Makefile.am  README  autogen.sh  configure.ac  dune.module
dune-femhowto/doc/: 3_poisson_with_fem.tex  4_introduction_fem.tex  bibliography.bib  part1.tex  part2.tex
dune-femhowto/doc/installation/: config.opts
dune-femhowto/sources/: Makefile.am  l2projection.hh  main.cc
dune-femhowto/sources/poisson/: README  poisson.cc
dune-femhowto/src_finitevolume/: adaptation.hh  finitevolumescheme.hh  norm.hh  transportproblem.hh
dune-femhowto/src_grid/: dgfparser.cc  dune_hello_world.cc  gettingstarted.cc
dune-femhowto/src_localdg/: .graperc  advectdiff.hh  datadisp.cc  discretemodels.hh  manager.replay  parameter  stuff.cc
dune-femhowto/src_localdg/doc/: Makefile.am
dune-femhowto/src_poisson/: Makefile.am  laplace.hh  matrixoperator.hh  problem.hh
dune-grid/grid/albertagrid/: Makefile.am  agcommunicator.hh  agelementindex.cc  agmemory.hh  agrid.hh  alberta_undefs.hh  albertaextra.hh  albertagrid.cc  albertaheader.hh  datahandle.hh  indexsets.hh  referencetopo.hh
dune-grid/grid/onedgrid/: Makefile.am  onedgrid.cc  onedgridentity.hh  onedgridentitypointer.hh  onedgridgeometry.hh  onedgridhieriterator.hh  (+4 more)
dune-navier-stokes/: .gitignore  Makefile.am  configure.ac  dune.module
dune-navier-stokes/src/: Makefile.am  dune_navier_stokes.cc
dune-stokes/: .gitignore  CMakeLists.txt  Doxyfile.in  Makefile.am  configure.ac  createBuildDir.sh  dune.module  kloc.cfg  libtool  loop.gnuplot  quasi_stokes_solution.mw  setting.gnuplot  stats.sh
dune-stokes/aorta/: aorta.dgf  aorta4.1.ele  aorta4.1.face  aorta4.smesh
dune-stokes/build-unitcube/: reference.param
dune-stokes/codeblocks/: dune-stokes.cbp  dune-stokes.depend  dune-stokes.layout
dune-stokes/darcy/: Makefile.am  analyticaldarcydata.hh  darcy.cc  darcy.param  darcy_permeabilitytensor.cc  ellipticmodels.hh  grid_2d.dgf  homogeneous_perforated_domain_2d_porosity_0.36_9_holes.1.dgf  micro_reference_velocity_X_ref_0.dgf  micro_reference_velocity_Y_ref_1.ddf  runmanager.hh  unit_sand_pore_in_2d.1.dgf
dune-stokes/doc/: Makefile.am
dune-stokes/elliptic/: .gitignore  Makefile.am  darcy.param  elementintegratortraits.hh  elliptic.cc  micro_2d.dgf  model.hh  simpleelementintegrator.h  test.param
dune-stokes/grape_replays/: graperc_macro_recording  manager.replay_test  manager.replay_vectors_with_pressure_underlay  manager.replay_vectors_with_pressure_underlay_diff-colorscheme
dune-stokes/grid_generation/: gridhelper.py  tube.py
dune-stokes/src/: Makefile.am  analyticaldata.hh  cube_with_hole_in_2d.dgf  cube_without_hole_in_2d.dgf  darcy.param  dimension_missing.param  dirichletdata.hh  discretemodel.hh  discretization.hh  dune_stokes.cc  dune_stokes_matlab_corrected.m  elementdata.hh  fluxes.hh  force.hh  generateCubeWithHole.py  generateHomogeneousPerforatedDomain.py  getWrongEntries.m  getWrongEntries_W  getdiag.m  grid.dgf  grid_2d.dgf  homogeneous_perforated_domain_2d_porosity_0.36_9_holes.1.dgf  homogeneous_perforated_domain_2d_porosity_0.4_9_holes.1.dgf  logging.hh  maple_vector_calculus.mw  micro.1.ele  micro.dgf  micro.param  minimal.cc  model.hh  no_surf_int_diff.mat  parametercontainer.hh  parameterhandler.hh  plotting.m  polorder_missing.param  postprocessing.hh  pressure.hh  problem.hh  profiler.hh  reference.param  (+12 more)
dune-stokes/stokes/: boundaryinfo.hh  cghelper.hh  discretefunctionspacepair.hh  discretegradientpass.hh  discretestokesfunctionspacewrapper.hh  discretestokesmodelinterface.hh  innercg.hh  saddlepoint_inverse_operator.hh  spinverseoperator.hh  stokespass.hh
dune-stokes/tools/: generateHomogeneousPerforatedDomain.py  save_diff.m
mirko_stokes/: 2dmacro.dgf.albertagrid.old  Doxyfile  Makefile.am  SPinverseoperator_original.hh  SPinverseoperator_symm.hh  Stokesoperator.hh  Stokespass.hh  Stokespasslocal2.hh  configure.ac  discretemodels.hh  discretemodels.hh.old  discretization.hh  dune.module  fluxes.hh  matrixoperator.hh  mystokesmodell.hh  out.txt  plot.txt  stokes.cc
(+2636 files in other folders)
